content/en/docs/2022.9/Reference/Concepts/working-with/collections/what-is-a-collection.md
---
title: "What is a Collection?"
linkTitle: "What is a Collection?"
description: "Information regarding what a collection is, and the different types of collections."
weight: 1
---

# {{% param title %}}

{{< workinprogress >}}

## Summary

TODO

## Types of Collections

### Dictionaries

TODO:

- Talk about typed dictionaries (TKey, TItem)
- Talk about heterogenous vs homogenous dictionaries (fix single data type vs multiple data types links in all dictionary blocks)
- Talk about keys, uniqueness and equality (link to Keys page)
- Talk about complex keys (link to Keys page)
- Items can be accessed as indexes
- Link to Data Type
- Creating a Dictionary

#### Accessing Items

##### Keys

### Structures

TODO:

- Structures are IDictionary&lt;string, object&gt; underlying (how does this interact with blocks?)
  - Talk about {} and dynamic vs object
- Talk about keys, uniqueness and equality (link to Keys page)
- Items can be accessed as indexes or properties
- Link to Data Type
- Creating a Structure

#### Accessing Items

##### Properties

##### Keys

### Lists

TODO:

- Talk about typed dictionaries (TItem)
- Talk about [] and dynamic vs object
- Talk about typed lists
- Talk about heterogenous vs homogenous lists (fix single data type vs multiple data types links in all list blocks)
- Items can be accessed as indexes
- Link to Data Type
- Creating a List

#### Accessing Items

##### Indexes

## Arrays vs Lists

### Differences

### When To Use Arrays

### When To Use Lists

- TODO: Some info on when to use array vs list - https://www.educba.com/c-sharp-list-vs-array/

## Remarks

### Known Limitations

#### Complex Keys do not show sho correctly in the Variable Details Viewer

Currently, if a Dictionary is shown in the Variable Details Viewer and contains Complex Data types as its keys, the data within the variable will not be displayed correctly.

In the future this limitation may be removed.

## See Also

### Related Concepts

TODO

### Related Data Types

TODO

### Related Blocks

TODO

### External Documentation

TODO
